# linuxdev2020

03_TerminalProject/: Makefile  show  show.c
04_Multifile/: Makefile
05_Enviroinmental/: CMakeLists.txt  main
06_Debugging/: double_malloc_free.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: CMakeLists.txt
09_I18nL10n/: Makefile  main  main.c
09_I18nL10n/po/ru/: main.po  main.po~
11_Toolkits/: Makefile  main.c
